--- a/index.html
+++ b/index.html
@@ -1,7 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Página Web</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            padding: 50px;
+            background-color: #4CAF50;
+            color: white;
+        }
+        .logo {
+            width: 200px;
+            height: auto;
+        }
+        .description {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #333;
+        }
+    </style>
+</head>
 <body>
-<h1>Sonic Rising Chaos Page</h1>
-<p>Best sonic game.</p>
+    <header>
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo" class="logo">
+        <div class="description">
+            <p>Bienvenidos a nuestra página web. Aquí encontrarás toda la información que necesitas sobre nuestros servicios y productos.</p>
+        </div>
+    </header>
 </body>
 </html>
