--- a/index.html
+++ b/index.html
@@ -10,30 +10,23 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: url('Background.png') no-repeat center center fixed;
+            background-size: cover;
         }
         header {
             padding: 50px;
-            background-color: #1234cf;
+            background-color: rgba(18, 52, 207, 0.8); /* Fondo semitransparente */
             color: white;
         }
         .logo {
             width: 1000px;
             height: auto;
         }
-        .description {
-            margin-top: 20px;
-            font-size: 18px;
-            color: #333;
-        }
     </style>
 </head>
 <body>
     <header>
         <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo" class="logo">
-        <div class="description">
-            <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
-        </div>
     </header>
 </body>
 </html>
