--- a/index.html
+++ b/index.html
@@ -22,11 +22,19 @@
             width: 1000px;
             height: auto;
         }
+        .description {
+            margin-top: 20px;
+            font-size: 18px;
+            color: white;
+        }
     </style>
 </head>
 <body>
     <header>
         <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo" class="logo">
+        <div class="description">
+            <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
+        </div>
     </header>
 </body>
 </html>
