--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             height: 100vh; /* Establece la altura del cuerpo al 100% del viewport */
             display: flex;
             flex-direction: column; /* Asegura que el contenido se alinee en columna */
+            justify-content: center; /* Centra verticalmente todo el contenido */
         }
         header {
             width: 80%; /* Ancho del header del 80% del ancho del cuerpo */
@@ -25,6 +26,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center; /* Centra verticalmente el contenido */
+            height: 100%; /* Ocupa todo el alto disponible */
         }
         .logo {
             width: 1000px;
