--- a/index.html
+++ b/index.html
@@ -12,23 +12,12 @@
             padding: 0;
             background: url('Background.png') no-repeat center center fixed;
             background-size: cover;
-            height: 100vh; /* Establece la altura del cuerpo al 100% del viewport */
-            display: flex;
-            flex-direction: column; /* Asegura que el contenido se alinee en columna */
+            background-color: #f4f4f4;
         }
         header {
-            width: 80%; /* Ancho del header del 80% del ancho del cuerpo */
-            margin: auto; /* Centra el header horizontalmente */
-            padding: 20px; /* Padding interno del header */
-            background-color: rgba(18, 52, 207, 0.8); /* Fondo semitransparente */
+            padding: 50px;
+            background-color: #1234cf;
             color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center; /* Centra verticalmente el contenido */
-            height: auto; /* Ajusta el alto automáticamente */
-        }
-        .logo-container {
-            margin: auto; /* Centra el contenedor del logo horizontalmente */
         }
         .logo {
             width: 1000px;
@@ -37,16 +26,13 @@
         .description {
             margin-top: 20px;
             font-size: 18px;
-            color: white;
-            text-align: center; /* Alinea el texto al centro */
+            color: #333;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo" class="logo">
-        </div>
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo" class="logo">
         <div class="description">
             <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
         </div>
