--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             padding: 50px;
             background-color: #1234cf;
             color: white;
+            height: 100px;
         }
         .logo {
             width: 1000px;
