--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('Background.png'); /* Cambia 'background.jpg' por tu imagen de fondo */
+            background-image: url('background.jpg'); /* Cambia 'background.jpg' por tu imagen de fondo */
             background-size: cover;
             background-position: center;
             font-family: Arial, sans-serif;
@@ -22,8 +22,8 @@
             padding: 20px;
             text-align: center;
             color: white;
-            width: 80%; /* Ancho del encabezado */
-            max-width: 600px; /* Ancho máximo para contenido */
+            width: 90%; /* Ancho del encabezado */
+            max-width: 800px; /* Ancho máximo para contenido */
             position: fixed;
             top: 0;
             bottom: 0;
