--- a/index.html
+++ b/index.html
@@ -6,31 +6,29 @@
     <title>Sonic Rising Chaos</title>
     <style>
         body {
-            background-image: url('Background.png');
+            background-image: url('background.jpg'); /* Cambia 'background.jpg' por la ruta de tu imagen de fondo */
             background-size: cover;
-            background-repeat: no-repeat;
+            background-position: center;
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 100px auto;
-            background-color: rgba(255, 255, 255, 0.7);
+            color: white;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
         .logo {
             max-width: 200px;
-            height: auto;
+            margin: 20px auto;
+        }
+        .description {
+            max-width: 600px;
+            margin: 0 auto;
+            font-size: 1.2em;
+            line-height: 1.6;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Sonic Rising Chaos Logo" class="logo">
+    <img src="logo.png" alt="Sonic Rising Chaos Logo" class="logo"> <!-- Cambia 'logo.png' por la ruta de tu logo -->
+    <div class="description">
         <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
     </div>
 </body>
