--- a/index.html
+++ b/index.html
@@ -1,35 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonic Rising Chaos</title>
-    <style>
-        body {
-            background-image: url('background.jpg'); /* Cambia 'background.jpg' por la ruta de tu imagen de fondo */
-            background-size: cover;
-            background-position: center;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            color: white;
-            padding: 20px;
-        }
-        .logo {
-            max-width: 200px;
-            margin: 20px auto;
-        }
-        .description {
-            max-width: 600px;
-            margin: 0 auto;
-            font-size: 1.2em;
-            line-height: 1.6;
-        }
-    </style>
+<html><head>
+    <title>Sonic Onset Adventure</title>
+    <link rel="icon" href="/favicon.png">
+    <link rel="stylesheet" href="/style.css">
+    
+    <meta content="Sonic Onset Adventure" property="og:title">
+    <meta content="Home" property="og:description">
+    <meta content="https://soniconset.org/" property="og:url">
+    <meta content="https://soniconset.org/soalogo.png" property="og:image">
+    <meta content="#181880" data-react-helmet="true" name="theme-color">
 </head>
 <body>
-    <img src="logo.png" alt="Sonic Rising Chaos Logo" class="logo"> <!-- Cambia 'logo.png' por la ruta de tu logo -->
-    <div class="description">
-        <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
+    <div class="content">
+        <img src="soalogo.png" alt="Sonic Onset Adventure" class="soalogo">
+        <hr>
+        <div class="soa_comingsoon">
+            <a href="download"><h1>Download the latest version here!</h1></a>
+            <p>Consider joining our <a href="https://discord.gg/jx8CzQ6Kfe">Discord Server</a></p>
+            <p>Or follow us on <a href="https://twitter.com/SonicOnset">Twitter</a></p>
+        </div>
+        <hr>
+        <div class="soa_aboutus">
+            <h2>About Us</h2>
+            <p>
+                Sonic Onset Adventure is a Sonic fangame that takes heavy inspiration from the Sonic style of the early 2000s.
+                Following the Adventure formula and physics closely and providing what we hope will be a fun game at the same time!
+            </p>
+            <hr>
+            <div class="soa_bio_l">
+                <a href="https://twitter.com/DigiPurgatory"><img src="pfp/digi.png" alt="DigitalPurgatory" class="soa_pfp"></a>
+                <h3>DigitalPurgatory</h3>
+                <p>Project lead, animation, character modelling, UI work. This guy can do it all.</p>
+                <p>He keeps everything going and directs us to make the best game we can!</p>
+            </div>
+            <div class="soa_bio_r">
+                <a href="https://twitter.com/cuckydev"><img src="pfp/cuckydev.png" alt="CKDEV" class="soa_pfp"></a>
+                <h3>CKDEV</h3>
+                <p>It's the programmer, and the second in command, I suppose.</p>
+                <p>He single handedly programs the entire game, from the backend systems to the physics.</p>
+            </div>
+            <div class="soa_bio_l">
+                <a href="https://twitter.com/SuperJumpman12"><img src="pfp/superjumpman.png" alt="SuperJumpman12" class="soa_pfp"></a>
+                <h3>SuperJumpman12</h3>
+                <p>He's the artist, he might even do programming sometimes.</p>
+                <p>He draws all the character art you see in the game, and also provides programming support when needed.</p>
+            </div>
+            <div class="soa_bio_r">
+                <a href="https://soundcloud.com/neometalserpent"><img src="pfp/criticalhealth.png" alt="Critical Health" class="soa_pfp"></a>
+                <h3>Critical Health</h3>
+                <p>It's the lead composer. Oh, yes.</p>
+                <p>He's composed all the music tracks you hear in the game, from remixes to fully original compositions, he does his job great!</p>
+            </div>
+            <div class="soa_bio_l">
+                <a href="https://twitter.com/Rune_The_Fool7"><img src="pfp/nemissa.png" alt="Nemissa" class="soa_pfp"></a>
+                <h3>Nemissa</h3>
+                <p>The assistant programmer.</p>
+                <p>She does a little more than code though, she's done some graphic design and stage design as well.</p>
+            </div>
+            <div class="soa_bio_r">
+                <a href="https://twitter.com/ZackATaei"><img src="pfp/zackataei.png" alt="ZackATaei" class="soa_pfp"></a>
+                <h3>ZackATaei</h3>
+                <p>Additional composition.</p>
+                <p>He helps out Critical Health with instrumentation, as well as coming up with some ideas.</p>
+            </div>
+            <div class="soa_bio_l">
+                <a href="https://twitter.com/ElPonchitoPio"><img src="pfp/elponchitopio.png" alt="ElPonchitoPio" class="soa_pfp"></a>
+                <h3>Ponchito</h3>
+                <p>The vocalist.</p>
+                <p>That's right, the voice behind the music!</p>
+            </div>
+            <div class="soa_bio_r">
+                <a href="https://twitter.com/CyberThePerson"><img src="pfp/cyber.png" alt="Cyber" class="soa_pfp"></a>
+                <h3>Cyber</h3>
+                <p>The Backup Modeller.</p>
+                <p>He helps out with backup character modelling!</p>
+            </div>
+        </div>
     </div>
-</body>
-</html>
+    <div class="footer">Sonic Onset Adventure ©SOA Team 2020-2023</div>
+
+
+</body></html>
