--- a/index.html
+++ b/index.html
@@ -7,22 +7,35 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
             text-align: center;
-            margin: 50px;
         }
         .logo {
-            max-width: 200px;
+            max-width: 150px;
             height: auto;
+            display: block;
+            margin: 0 auto;
         }
         .description {
+            text-align: center;
             margin-top: 20px;
-            font-size: 1.2em;
         }
     </style>
 </head>
 <body>
-    <img src="tu_logo.png" alt="Logo de mi sitio web" class="logo">
-    <h1>Bienvenido a mi Sitio Web</h1>
-    <p class="description">Aquí puedes encontrar información interesante sobre diversos temas.</p>
+    <header>
+        <img src="tu_logo.png" alt="Logo de Mi Sitio Web" class="logo">
+        <h1>Bienvenido a Mi Sitio Web</h1>
+    </header>
+    <div class="description">
+        <p>Este es un sitio web de ejemplo con un encabezado, un logo y una descripción.</p>
+    </div>
 </body>
 </html>
