--- a/index.html
+++ b/index.html
@@ -3,39 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Sitio Web</title>
+    <title>Sonic Rising Chaos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
+            background-image: url('Background.png'); /* Ruta de tu imagen de fondo */
+            background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
+            background-position: center; /* Centra la imagen de fondo */
         }
         header {
-            background-color: #333;
+            background-color: rgba(0, 68, 214, 0.7); /* Color de fondo con transparencia */
             color: #fff;
-            padding: 10px 0;
+            padding: 10px 20px;
             text-align: center;
         }
         .logo {
-            max-width: 150px;
+            max-width: 1000px;
             height: auto;
-            display: block;
-            margin: 0 auto;
         }
         .description {
+            margin: 20px;
             text-align: center;
-            margin-top: 20px;
+            color: #fff; /* Ajusta el color del texto para que sea legible sobre el fondo */
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="tu_logo.png" alt="Logo de Mi Sitio Web" class="logo">
-        <h1>Bienvenido a Mi Sitio Web</h1>
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="logo">
+        <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
     </header>
-    <div class="description">
-        <p>Este es un sitio web de ejemplo con un encabezado, un logo y una descripción.</p>
-    </div>
 </body>
 </html>
