--- a/index.html
+++ b/index.html
@@ -9,30 +9,28 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('Background.png'); /* Ruta de tu imagen de fondo */
-            background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
-            background-position: center; /* Centra la imagen de fondo */
+            background: url('Background.png') center/cover no-repeat fixed; /* Imagen de fondo */
         }
         header {
-            background-color: rgba(0, 68, 214, 0.7); /* Color de fondo con transparencia */
+            background-color: rgba(0, 81, 255, 0.5); /* Fondo semi-transparente */
             color: #fff;
-            padding: 10px 20px;
+            padding: 20px;
             text-align: center;
         }
         .logo {
-            max-width: 1000px;
+            max-width: 150px;
             height: auto;
         }
         .description {
             margin: 20px;
             text-align: center;
-            color: #fff; /* Ajusta el color del texto para que sea legible sobre el fondo */
+            color: #fff;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="logo">
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo de la empresa" class="logo">
         <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
     </header>
 </body>
